--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^2.4.1",
     "aos": "^2.3.4",
     "framer-motion": "^11.2.10",
+    "mongoose": "^8.4.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
