--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.1",
+    "@supabase/supabase-js": "^2.43.4",
     "aos": "^2.3.4",
+    "bcrypt": "^5.1.1",
     "framer-motion": "^11.2.10",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
@@ -21,6 +24,8 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
