--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
   "dependencies": {
     "@nextui-org/react": "^2.4.1",
     "@supabase/supabase-js": "^2.43.4",
+    "@uppy/core": "^3.12.0",
+    "@uppy/dashboard": "^3.8.3",
+    "@uppy/drag-drop": "^3.1.0",
+    "@uppy/file-input": "^3.1.2",
+    "@uppy/progress-bar": "^3.1.1",
+    "@uppy/react": "^3.3.1",
+    "@uppy/tus": "^3.5.5",
     "aos": "^2.3.4",
     "bcrypt": "^5.1.1",
     "framer-motion": "^11.2.10",
