--- a/package.json
+++ b/package.json
@@ -11,38 +11,24 @@
   "dependencies": {
     "@fontsource/libre-franklin": "^5.0.18",
     "@nextui-org/react": "^2.4.1",
-    "@supabase/supabase-js": "^2.43.4",
-    "@uppy/core": "^3.12.0",
-    "@uppy/dashboard": "^3.8.3",
-    "@uppy/drag-drop": "^3.1.0",
-    "@uppy/file-input": "^3.1.2",
-    "@uppy/progress-bar": "^3.1.1",
-    "@uppy/react": "^3.3.1",
-    "@uppy/tus": "^3.5.5",
     "aos": "^2.3.4",
-    "bcrypt": "^5.1.1",
     "framer-motion": "^11.2.10",
     "hamburger-react": "^2.5.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.1",
     "next": "14.2.3",
-    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
-    "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "18.3.3",
     "@types/react-dom": "^18",
     "@types/tailwindcss": "^3.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "5.5.3"
   }
 }
