--- a/package.json
+++ b/package.json
@@ -3,20 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "i18nexus pull && next dev",
+    "build": "i18nexus pull && next build",
+    "start": "i18nexus pull && next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@fontsource/libre-franklin": "^5.0.18",
     "@nextui-org/react": "^2.4.1",
+    "@types/react-i18next": "^8.1.0",
     "aos": "^2.3.4",
     "framer-motion": "^11.2.10",
     "hamburger-react": "^2.5.1",
+    "i18next": "^23.11.5",
+    "i18next-resources-to-backend": "^1.2.1",
     "next": "14.2.3",
+    "next-i18n-router": "^5.5.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^14.1.2",
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
@@ -27,6 +32,7 @@
     "@types/tailwindcss": "^3.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "i18nexus-cli": "^3.4.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "5.5.3"
